feat(auth):update function register and added otp to verification

--- a/.env.example
+++ b/.env.example
@@ -11,6 +11,8 @@ JWT_EXPIRES_IN=1d
 JWT_REFRESH_SECRET=your-refresh-secret-change-this-also-min-32-chars
 JWT_REFRESH_EXPIRES_IN=7d
 
+#OTP Secrets
+OTP_EXPIRES_IN=300
 # Email (Mailtrap for development - sign up at mailtrap.io)
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
