Add User Module

--- a/.env.example
+++ b/.env.example
@@ -28,3 +28,9 @@ CLOUDINARY_API_SECRET=your-api-secret
 # Redis (for caching - optional for now)
 REDIS_HOST=localhost
 REDIS_PORT=6379
+OTP_EXPIRES_IN=7d
+
+# ImageKit Configuration
+IMAGEKIT_PUBLIC_KEY=public_xxxxxxxxxxxxxxxxxxxxxxxx
+IMAGEKIT_PRIVATE_KEY=private_yyyyyyyyyyyyyyyyyyyyyy
+IMAGEKIT_URL_ENDPOINT=https://ik.imagekit.io/your_imagekit_id
