--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "gsg-project-group-5",
+  "engines": {
+  "node": "20.x"
+  },
+
   "version": "0.0.1",
   "description": "",
   "author": "",
