--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "gsg-project-group-5",
   "engines": {
     "node": "20.x"
-   },
+  },
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -20,7 +20,8 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json"
+    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "@nestjs-modules/mailer": "^2.0.2",
