work in progress

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,8 @@ NODE_ENV=development
 PORT=3000
 
 # Database
-DATABASE_URL="mysql://root:root@localhost:3306/skillswap_dev"
+DATABASE_URL="postgresql://mohammed:iGB2wTs4lUJqrj5PmVhA8dAoDJR92iRX@dpg-d5t32p14tr6s738gdmm0-a.oregon-postgres.render.com/skill_swap_db_kyba"
+
 
 # JWT Secrets (CHANGE THESE IN PRODUCTION!)
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production-min-32-chars
